--- a/components/Clock/styles/Clock.module.sass
+++ b/components/Clock/styles/Clock.module.sass
@@ -1,6 +1,10 @@
 .clock-wrap
   height: 100vh
   width: 100%
+  display: flex
+  justify-content: center
+  align-content: center
+  flex-direction: column
   font: normal normal 300 24px/29px Lato
   .logo-bg
     height: 300px
