--- a/components/TaskList/styles/index.module.sass
+++ b/components/TaskList/styles/index.module.sass
@@ -1,3 +1,4 @@
+@import "variables"
 #task-list
   width: 100%
   padding: 30px
@@ -20,7 +21,7 @@
       background: #606060
       &.active
         color: #fff
-        background: #EA5548
+        background: $color-red
 
   .list-frame
     ul
