change sass  color

--- a/components/AddTask/styles/index.module.sass
+++ b/components/AddTask/styles/index.module.sass
@@ -1,20 +1,21 @@
+@import "variables"
 #add-task
   width: 100%
   padding: 30px
   .title
     font-size: 1.8rem
-    color: #FCFCFC
+    color: $color-light
   .content
     margin: 25px 0
     padding: 25px 0
-    border-top: .3px #ACACAC solid
+    border-top: .3px $color-gray-200 solid
   .tomato-list
     margin-top: 10px
     display: flex
     justify-content: space-between
   label
     font-size: 1rem
-    color: #ACACAC
+    color: $color-gray-200
   input
     width: 100%
     margin-top: 10px
@@ -25,10 +26,10 @@
   button.add-btn
     width: 100%
     padding: 15px
-    border-radius: 30px
-    color: #FCFCFC
-    background-color: #EA5548
+    border-radius: 30pxs
+    color: $color-light
+    background-color: $color-red
     border: none
   hr
     margin: 20px 0
-    color: #ACACAC
+    color: $color-gray-200
