--- a/components/Clock/styles/index.module.sass
+++ b/components/Clock/styles/index.module.sass
@@ -1,3 +1,4 @@
+@import "variables"
 .clock-wrap
   height: 100vh
   width: 100%
@@ -25,11 +26,11 @@
     left: 50%
     transform: translate(-50%,-60%)
     letter-spacing: 3.6px
-    color: #FCFCFC
+    color: $color-light
     font-weight: 200
   .content-text,.footer-text
     text-align: center
-    color: #333333
+    color: $color-dark-800
   .context-text
     letter-spacing: 1.4px
     font-size: 1rem
