--- a/components/TaskList/styles/index.module.sass
+++ b/components/TaskList/styles/index.module.sass
@@ -4,11 +4,11 @@
   padding: 30px
   .title
     font-size: 1.8rem
-    color: #FCFCFC
+    color: $color-light
   .content
     margin: 25px 0
     padding: 25px 0
-    border-top: .3px #ACACAC solid
+    border-top: .3px $color-gray-200 solid
   .tab-wrap
     display: flex
     button
@@ -17,10 +17,10 @@
       border: none
       border-top-left-radius: 10px
       border-top-right-radius: 10px
-      color: #ACACAC
-      background: #606060
+      color: $color-gray-200
+      background: $color-gray-400
       &.active
-        color: #fff
+        color: $color-white
         background: $color-red
 
   .list-frame
@@ -31,4 +31,4 @@
         display: flex
         justify-content: space-between
         align-items: center
-        background: #414141
+        background: $color-dark-400
