--- a/components/TaskList/styles/index.module.sass
+++ b/components/TaskList/styles/index.module.sass
@@ -1,11 +1,13 @@
 @import "variables"
 #task-list
   width: 100%
+  height: 100%
   padding: 30px
   .title
     font-size: 1.8rem
     color: $color-light
   .content
+    height: calc(100% - 50px)
     margin: 25px 0
     padding: 25px 0
     border-top: .3px $color-gray-200 solid
@@ -24,6 +26,8 @@
         background: $color-red
 
   .list-frame
+    height: calc(100% - 5%)
+    overflow-y: scroll
     ul
       li
         margin-top: 1px
