--- a/components/TaskList/styles/index.module.sass
+++ b/components/TaskList/styles/index.module.sass
@@ -32,7 +32,33 @@
       li
         margin-top: 1px
         padding: 10px 15px 10px 40px
-        display: flex
-        justify-content: space-between
-        align-items: center
+
         background: $color-dark-400
+
+  .task-item-frame
+    width: 100%
+  .task-item-header
+    display: flex
+    justify-content: space-between
+    align-items: center
+  .task-title
+    font-size: 1rem
+
+  .btn-wrap
+    width: 100%
+  .btn-archive, .btn-save
+    border-radius: 20px
+    font-size: 1rem
+    border: none
+    text-indent: 1
+  .btn-archive
+    width: 28%
+    margin-right: calc( 100% - 98% )
+    padding: 10px 20px
+    background: $color-gray-400
+    color: $color-white
+  .btn-save
+    width: 70%
+    padding: 10px 35px
+    background: $color-red
+    color: $color-white
