--- a/components/AddTask/styles/index.module.sass
+++ b/components/AddTask/styles/index.module.sass
@@ -1,18 +1,6 @@
 @import "variables"
-#add-task
-  width: 100%
-  padding: 30px
-  .title
-    font-size: 1.8rem
-    color: $color-light
-  .content
-    margin: 25px 0
-    padding: 25px 0
-    border-top: .3px $color-gray-200 solid
-  .tomato-list
-    margin-top: 10px
-    display: flex
-    justify-content: space-between
+.content
+  margin-bottom: 50px
   label
     font-size: 1rem
     color: $color-gray-200
@@ -23,13 +11,11 @@
     padding: 15px
     border: none
     border-radius: 5px
-  button.add-btn
-    width: 100%
-    padding: 15px
-    border-radius: 30pxs
-    color: $color-light
-    background-color: $color-red
-    border: none
-  hr
-    margin: 20px 0
-    color: $color-gray-200
+    
+.add-btn
+  width: 100%
+  padding: 15px
+  border: none
+  border-radius: 30px
+  color: $color-light
+  background-color: $color-red
