--- a/components/TaskList/styles/index.module.sass
+++ b/components/TaskList/styles/index.module.sass
@@ -23,12 +23,11 @@
 
 .list-frame
   height: calc(100% - 5%)
-  overflow-y: scroll
+  overflow-y: auto
   ul
     li
       margin-top: 1px
       padding: 10px 15px 10px 40px
-
       background: $color-dark-400
 
 .task-item-frame
@@ -43,8 +42,8 @@
   transition: all 0.3s ease 0s
 
 .task-info
-  margin-top: 10px
-  padding-top: 10px
+  margin-top: 15px
+  padding-top: 15px
   font-size: .8rem
   color: $color-gray-200
   border-top: .3px $color-dark-800 solid
