--- a/components/Clock/styles/index.module.sass
+++ b/components/Clock/styles/index.module.sass
@@ -2,40 +2,50 @@
 .clock-wrap
   height: 100vh
   width: 100%
+  position: relative
   display: flex
   justify-content: center
   align-content: center
   flex-direction: column
   font: normal normal 300 24px/29px Lato
-  .logo-bg
-    height: 300px
-    width: 300px
-    margin-left: auto
-    margin-right: auto
-    margin-top: 30px
-    margin-bottom: 30px
-    position: relative
-    text-align: center
-    background-image: url('/images/icons/tomato_small_color.svg')
-    background-repeat: no-repeat
-    background-position: center center
-    background-size: contain
+.logo-bg
+  height: 300px
+  width: 300px
+  margin-left: auto
+  margin-right: auto
+  margin-top: 30px
+  margin-bottom: 30px
+  position: absolute
+  top: 35%
+  left: 50%
+  transform: translate(-50%,-50%)
+  text-align: center
+  background-image: url('/images/icons/tomato_small_color.svg')
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: contain
   h1
     position: absolute
     top: 50%
     left: 50%
-    transform: translate(-50%,-60%)
+    transform: translate(-50%,-50%)
     letter-spacing: 3.6px
     color: $color-light
     font-weight: 200
-  .content-text,.footer-text
-    text-align: center
-    color: $color-dark-800
-  .context-text
-    letter-spacing: 1.4px
-    font-size: 1rem
-  .footer-text
-    letter-spacing: 1.5px
-    font-size: .8rem
-
-  // background-color: #EAEAEA
+.content-text,.footer-text
+  text-align: center
+  color: $color-dark-800
+.content-text
+  position: absolute
+  top: 65%
+  left: 50%
+  transform: translate(-50%,-50%)
+  letter-spacing: 1.4px
+  font-size: 1rem
+.footer-text
+  position: absolute
+  bottom: 5%
+  left: 50%
+  transform: translateX(-50%)
+  letter-spacing: 1.5px
+  font-size: .8rem
