左半邊區域切版

--- a/components/Clock/styles/index.module.sass
+++ b/components/Clock/styles/index.module.sass
@@ -8,6 +8,7 @@
   align-content: center
   flex-direction: column
   font: normal normal 300 24px/29px Lato
+
 .logo-bg
   height: 300px
   width: 300px
@@ -32,6 +33,7 @@
     letter-spacing: 3.6px
     color: $color-light
     font-weight: 200
+
 .content-text,.footer-text
   text-align: center
   color: $color-dark-800
@@ -42,6 +44,29 @@
   transform: translate(-50%,-50%)
   letter-spacing: 1.4px
   font-size: 1rem
+
+.clock-info
+  text-align: center
+
+.task-name
+  margin: 20px 0
+
+.btn-wrap
+  margin: 50px 0
+  button
+    margin: 0px calc( 75px / 2 )
+    height: 50px
+    width: 50px
+    background: $color-white
+    border: none
+    border-radius: 50%
+  img
+    margin: auto
+
+.task-note
+  font-size: 1rem
+  
+
 .footer-text
   position: absolute
   bottom: 5%
