--- a/components/Shared/styles/estimatedTomato.module.sass
+++ b/components/Shared/styles/estimatedTomato.module.sass
@@ -3,8 +3,22 @@
   margin-top: 20px
   font-size: 1rem
   color: $color-gray-200
+
 .tomato-list
   margin-top: 15px
   margin-bottom: 15px
   display: flex
   justify-content: space-between
+  button.origin,button.active
+    width: 30px
+    height: 30px
+    background-position: center
+    background-size: contain
+    background-repeat: no-repeat
+    background-color: transparent
+    border: none
+    cursor: pointer
+  button.origin
+    background-image: url('/images/icons/tomato_small_gray.svg')
+  button.active
+    background-image: url('/images/icons/tomato_small_color.svg')
