--- a/components/Navbar/styles/index.module.sass
+++ b/components/Navbar/styles/index.module.sass
@@ -7,9 +7,13 @@
   color: $color-white
   // transition: margin-left 2s 1s
   transition: all 1s ease 0s
+  &.navbar-width
+    width: 100vw
+    max-width: 650px
 
 .show-navbar
   width: 100%
+  max-width: 900px
   // display: none
   transition: all 1s ease 0s
   // background: red
