--- a/components/Clock/styles/index.module.sass
+++ b/components/Clock/styles/index.module.sass
@@ -85,7 +85,7 @@
           padding: 5px 0
           opacity: 1
           background: rgba(255, 255, 255, .5)
-    .active
+    // .active
       
 
 .task-note
