--- a/components/Navbar/styles/index.module.sass
+++ b/components/Navbar/styles/index.module.sass
@@ -5,22 +5,44 @@
   display: flex
   background: $color-dark-800
   color: $color-white
-  // transition: margin-left 2s 1s
-  transition: all 1s ease 0s
-  &.navbar-width
-    width: 100vw
-    max-width: 650px
+  // &.navbar-width
+  //   width: 100vw
+  //   max-width: 650px
 
 .show-navbar
   width: 100%
+  width: 30vw
   max-width: 900px
-  // display: none
-  transition: all 1s ease 0s
-  // background: red
+  &.active
+    opacity: 1
+    display: block
+    animation: opennavbar 0.5s
+  &.hidden
+    width: 0
+    opacity: 0
+    animation: hidden 0.5s
+@keyframes opennavbar
+  0%
+    display: none
+    width: 70px
+  100%
+    width: 30vw
+
+@keyframes hidden
+  0%
+    display: block
+    width: 20vw
+    opacity: 1
+  60%
+    opacity: 0.8
+  100%
+    opacity: 0
+    width: 0vw
 
 .nav-list
   display: flex
   flex-direction: column
+  width: 80px
   button
     padding: 0
     border: none
