--- a/components/Shared/styles/navbarContainer.module.sass
+++ b/components/Shared/styles/navbarContainer.module.sass
@@ -11,3 +11,7 @@
   margin: 25px 0
   padding: 25px 0
   border-top: .3px $color-gray-200 solid
+
+@media (max-width:768px)
+  .container-wrap
+    padding: 20px 10px
